--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,7 +1,7 @@
 \section{Conclusion}
 
-In this study, we explored if a machine learning model can \textit{learn how to learn}, and generalise using only a few examples in the virtual screening domain. This study builds on the work from \citet{altae2017low}, who have set important foundations for this domain. We reproduce their work effectively and provide deeper insights into the study by introducing PR-AUC reporting, in addition to the reported ROC-AUC scores in their study to increase robustness against highly imbalanced data. We also introduce Prototypical Networks and Relation Networks, two new few-shot machine learning models, to this domain, and compare results to the state-of-the-art.
+In this study, we explored if a machine learning model can \textit{learn how to learn} and generalise using only a few examples in the virtual screening domain. This study builds on the work from \citet{altae2017low}, who have set essential foundations for this domain. We reproduce their work effectively and provide deeper insights into the study by introducing PR-AUC reporting, in addition to the reported ROC-AUC scores in their study, to increase robustness against highly imbalanced data. We also introduce Prototypical Networks and Relation Networks, two new few-shot machine learning models, to this domain and compare results to the state-of-the-art.
 
-While performance varies across the datasets used, this difference is consistent with the reported results from \citet{altae2017low}. The Prototypical Networks outperform all other machine learning models, including the state-of-the-art model, based on ROC-AUC and PR-AUC performance on the Tox21 dataset. Additionally, given the highly imbalanced nature of the data, our PR-AUC results provide more robust insights into the performance of the models. The state-of-the-art and the Prototypical Networks perform significantly better than our implementation of Relation Networks. We also observe that Prototypical Networks achieve this improved performance with much faster training times than our implementation of the state-of-the-art. 
+While performance varies across the datasets, this difference is consistent with the reported results from \citet{altae2017low}. The Prototypical Networks outperform all other machine learning models, including the state-of-the-art model, based on ROC-AUC and PR-AUC performance on the Tox21 dataset. Additionally, given the highly imbalanced nature of the data, our PR-AUC results provide more robust insights into the performance of the models. The state-of-the-art and Prototypical Networks perform significantly better than our implementation of Relation Networks. We also observe that Prototypical Networks achieve this improved performance with much faster training times than our implementation of the state-of-the-art. 
 
-The same generalising capabilities are not observed on MUV data, due to the nature of this data where active compounds per target are highly scarce, and each compound is structural distinct. Results on the DUD-E GPCR subset are also not conclusive and for these datasets, our baseline experiments using conventional machine learning techniques perform better. We conclude that Prototypical Networks offer better generalising capabilities for few-shot learning in ligand-based virtual screening than the Matching Networks component used in the state-of-the-art, however, this is dependent on the nature of the data used. Finally, we also observe that making use of learned embeddings through GCNs, as opposed to ECFPs, consistently results in better ROC-AUC and PR-AUC performances.
+Due to the nature of the data used, where active compounds per target are highly scarce and each compound is structurally distinct, MUV data does not provide enough information for the machine learning model to generalise effectively for few-shot learning. Results on the DUD-E GPCR subset are also inconclusive, and for these datasets, our baseline experiments using conventional machine learning techniques perform better. We conclude that Prototypical Networks offer better generalising capabilities for few-shot learning in ligand-based virtual screening, specifically for lead optimisation, than the Matching Networks component used in the state-of-the-art. However, this is dependent on the nature of the data used. Finally, we also observe that using learned embeddings through GCNs, as opposed to ECFPs, consistently results in better ROC-AUC and PR-AUC performances.
